corection fix no wrap

--- a/src/output.css
+++ b/src/output.css
@@ -1615,6 +1615,10 @@ body{
 }
 
 @media (min-width: 768px) {
+  .md\:hidden {
+    display: none;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
